examples/test/testpolicy10500.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10500
  namespace: namespace454
spec:
  podSelector:
    matchLabels:
      key36: value3
      key22: value7
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value23
          key39: value11
          key11: value9
      podSelector:
        matchLabels:
          key6: value22
